# KBP

./: .dockerignore  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
dev/: init-user-db.sql
docs/: db_schema.md  tools.md
docs/uml/: database_schema.puml
kbp/: app.py  boundaries.py  config.py  middlewares.py  models.py  spec.py
kbp/routes/v1/: __init__.py  practice.py
migrations/: env.py
migrations/versions/: 8ab2830374dd_init.py  a1566e4a8c3e_file_task.py
