[tool.poetry]
name = "kbp"
version = "0.1.0"
description = ""
authors = ["Misha Bohdan <misha-bohdan@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
python-multipart = "^0.0.5"
alembic = "^1.8.1"
aioboto3 = "^10.1.0"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^1.4.43"}
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pylama = {extras = ["all"], version = "^8.4.1"}
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = {version = "^22.10.0", allow-prereleases = true}
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
